--- a/app/views/availabilities/_availability.html.erb
+++ b/app/views/availabilities/_availability.html.erb
@@ -1,22 +1,11 @@
 <div id="<%= dom_id availability %>">
-  <p>
-    <strong>Tutor:</strong>
-    <%= availability.tutor_id %>
-  </p>
-
-  <p>
-    <strong>Day:</strong>
-    <%= availability.day %>
-  </p>
-
-  <p>
-    <strong>Starts at:</strong>
-    <%= availability.starts_at %>
-  </p>
-
-  <p>
-    <strong>Ends at:</strong>
-    <%= availability.ends_at %>
-  </p>
-
+<div class="card">
+  <div class="card-body">
+    <h5 class="card-title">Availability</h5>
+    <p class="card-text"><strong>Tutor:</strong><%=availability.tutor_id%></p>
+    <p class="card-text"><strong>Day:</strong><%=availability.day%></p>
+    <p class="card-text"><strong>Starts at:</strong><%=availability.starts_at%></p>
+    <p class="card-text"><strong>Ends at:</strong><%=availability.ends_at%></p>
+  </div>
+</div>
 </div>
