--- a/app/views/tutors/_tutor.html.erb
+++ b/app/views/tutors/_tutor.html.erb
@@ -8,7 +8,7 @@
   <div class="row">
     <p>
       <strong>Email:</strong>
-      <%= tutor.email %>
+      <%= tutor.user.email %>
     </p>
   </div>
   <div class="row">
