--- a/app/views/availabilities/index.html.erb
+++ b/app/views/availabilities/index.html.erb
@@ -12,3 +12,20 @@
 </div>
 
 <%= link_to "New availability", new_availability_path %>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-6 mx-auto">
+      <p class="alert alert-success"><%= notice %></p>
+      <h1 class="mb-4">Availabilities</h1>
+      <div id="availabilities">
+        <% @availabilities.each do |availability| %>
+          <%= render availability %>
+          <p>
+            <%=link_to "Show this availability",availability,class: "btn btn-primary"%>
+          </p>
+        <% end %>
+      </div>
+      <%= link_to "New availability",new_availability_path,class: "btn btn-success"%>
+    </div>
+  </div>
+</div>
