--- a/app/views/availabilities/new.html.erb
+++ b/app/views/availabilities/new.html.erb
@@ -1,9 +1,11 @@
-<h1>New availability</h1>
-
-<%= render "form", availability: @availability %>
-
-<br>
-
-<div>
-  <%= link_to "Back to availabilities", availabilities_path %>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-6 mx-auto">
+      <h1 class="text-center">New Availability</h1>
+      <%= render "form", availability: @availability %>
+      <div class="text-center mt-3">
+        <%= link_to "Back to availabilities",availabilities_path,class:"btn btn-secondary"%>
+      </div>
+    </div>
+  </div>
 </div>
