--- a/app/views/availabilities/show.html.erb
+++ b/app/views/availabilities/show.html.erb
@@ -1,10 +1,13 @@
-<p style="color: green"><%= notice %></p>
-
-<%= render @availability %>
-
-<div>
-  <%= link_to "Edit this availability", edit_availability_path(@availability) %> |
-  <%= link_to "Back to availabilities", availabilities_path %>
-
-  <%= button_to "Destroy this availability", @availability, method: :delete %>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-6 mx-auto">
+      <p class="text-success"><%= notice %></p>
+      <%= render @availability %>
+      <div class="mt-3">
+        <%= link_to "Edit this availability",edit_availability_path(@availability),class: "btn btn-primary mr-2" %> |
+        <%= link_to "Back to availabilities",availabilities_path,class:"btn btn-secondary mr-2" %>
+        <%= button_to "Destroy this availability",@availability,method:  :delete, data:{confirm: "Are you sure?"},class:"btn btn-danger"%>
+      </div>
+    </div>
+  </div>
 </div>
