--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,5 +3,7 @@
   <div class="d-flex">
     <%= link_to "Courses", courses_path, class: "flex-grow-1 flex-shrink-1 m-5 p-5 text-center text-light bg-dark" %>
     <%= link_to "Tutors", tutors_path, class: "flex-grow-1 flex-shrink-1 m-5 p-5 text-center text-light bg-dark" %>
+
+    <%= link_to "Dashboard", dashboard_path, class: "flex-grow-1 flex-shrink-1 m-5 p-5 text-center text-light bg-dark" %>
   </div>
 </div>
