--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,15 +1,16 @@
-<div id="clearance" class="sign-up">
-  <h2><%= t(".title") %></h2>
+<div id="clearance" class="sign-up ">
+  <h2 class="text-center mt-5"><%= t(".title") %></h2>
 
   <%= form_for @user do |form| %>
     <%= render partial: '/users/form', object: form %>
 
-    <div class="submit-field">
-      <%= form.submit %>
+    <div class="submit-field  d-flex justify-content-center mt-4">
+      <%= form.submit :class => "btn btn-primary btn-lg" %>
     </div>
 
-    <div class="other-links">
+    <div class="other-links d-flex justify-content-center mt-5 mb-5">
       <%= link_to t(".sign_in"), sign_in_path %>
     </div>
+
   <% end %>
 </div>
