--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -6,6 +6,6 @@
    <% elsif current_user&.student? %>
    this for registerd students
    <% else %>
-    <%= link_to "Register as a student", students_new_path %> to access our services
+    <%= link_to "Register as a student", new_student_path %> to access our services
   <% end %>
 </div>
