--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -6,7 +6,7 @@
       <%= render "form", appointment: @appointment %>
 
       <div class="mt-4">
-        <%= link_to "Back to Appointments", appointments_path, class: "btn btn-secondary" %>
+      <%= link_to "Back to Appointments", '/pages/appointments', class: "btn btn-secondary" %>
       </div>
     </div>
   </div>
