--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,9 @@
             <li class="nav-item">
               <%= link_to 'Tutors', tutors_path, class: "nav-link" %>
             </li>
+             <li class="nav-item">
+              <%= link_to "Appointments", '/pages/appointments', class: "nav-link" %>
+            </li>
           </ul>
           <% if signed_in? %>
             Welcome <%= current_user.email %>
