--- a/app/views/availabilities/index.html.erb
+++ b/app/views/availabilities/index.html.erb
@@ -26,6 +26,7 @@
         <% end %>
       </div>
       <%= link_to "New availability",new_tutor_availability_path(@tutor),class: "btn btn-success"%>
+      <%= link_to "New availability",new_tutor_availability_path(@tutor),class: "btn btn-success"%>
     </div>
   </div>
 </div>
